fix: remove gap and height properties from BoardHeader and home styles for better layout consistency

--- a/src/assets/styles/components/BoardHeader.scss
+++ b/src/assets/styles/components/BoardHeader.scss
@@ -2,7 +2,6 @@
     font-size: 14px;
     align-items: center;
     justify-content: space-between ;
-    gap: 10px;
     position: sticky;
     top: 0;
     left: 0;
