--- a/src/assets/styles/pages/home.scss
+++ b/src/assets/styles/pages/home.scss
@@ -4,7 +4,6 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    height: 100vh;
 }
 
 .icon-span-container {
